tests/invalid/pragma_c_code_no_det.err_exp2
pragma_c_code_no_det.m:016: Error: no clauses for
pragma_c_code_no_det.m:016:   predicate `pragma_c_code_no_det.c_code/1'.
