tests/invalid/pragma_c_code_no_det.err_exp
pragma_c_code_no_det.m:009: In `test'(out):
pragma_c_code_no_det.m:009:   warning: determinism declaration could be
pragma_c_code_no_det.m:009:   tighter.
pragma_c_code_no_det.m:009:   Declared `det', inferred `erroneous'.
pragma_c_code_no_det.m:016: In `c_code'(out):
pragma_c_code_no_det.m:016:   error: `:- pragma foreign_proc(...)' for a
pragma_c_code_no_det.m:016:   procedure without a determinism declaration.
